Bug 169730 - Persian (Farsi) filenames are displayed reversed in LibreOffice Start Center
Summary: Persian (Farsi) filenames are displayed reversed in LibreOffice Start Center
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.3.2 release
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:25.8.5 target:25...
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-28 14:44 UTC by افشین
Modified: 2025-12-11 08:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Persian (Farsi) filenames are displayed reversed in LibreOffice Start Center (93.26 KB, image/jpeg)
2025-11-28 14:45 UTC, افشین
Details

Note You need to log in before you can comment on or make changes to this bug.
Description افشین 2025-11-28 14:44:20 UTC
Description:
LibreOffice displays Persian (Farsi) filenames reversed in the Start Center. When opening LibreOffice (tested on version 25.8.3.2), the filenames shown under the recent documents or templates appear in the wrong character order. For example, the filename “تمرین” is displayed as “نیرمت”.

This issue affects only the visual representation inside the Start Center. The actual filenames are stored correctly in the file system, and other applications render them in proper right-to-left order.

Steps to Reproduce:
1. Open LibreOffice (tested on version 25.8.3.2).
2. Go to the Start Center where recent files and templates are shown.
3. Observe the display of filenames written in Persian (RTL script)

Actual Results:
Persian filenames appear reversed.
For example, the word “تمرین” is displayed as “نیرمت”.

Expected Results:
Filenames written in Persian (right-to-left script) should be displayed in the correct RTL order.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.3.2 (X86_64) / LibreOffice Community
Build ID: 580(Build:2)
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Ubuntu package version: 4:25.8.3~rc2-0ubuntu0.24.04.1~lo1
Calc: threaded
Comment 1 افشین 2025-11-28 14:45:39 UTC
Created attachment 204329 [details]
Persian (Farsi) filenames are displayed reversed in LibreOffice Start Center
Comment 2 Hossein 2025-11-28 16:21:04 UTC
Reproduced with:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Not reproducing with:

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Therefore, this is a regression. Requesting bibisect.
Comment 3 Hossein 2025-12-01 18:58:07 UTC
Bisected to:
 e5f0dad2b38d2a3902a9cd6b9d434abc206590a4 is the first bad commit
commit e5f0dad2b38d2a3902a9cd6b9d434abc206590a4
Author: Xisco Fauli <xiscofauli@libreoffice.org>
Date:   Thu Sep 18 14:28:13 2025 +0200

    tdf#168452: support unicode-bidi in svg
    
    Before this change, getBiDiStrong() was never used
    to manipulate the text

Adding Xisco.
Comment 4 Hossein 2025-12-05 18:20:00 UTC
Increasing the importance of the issue to Priority: High, and Severity: Major.

The reason is that:

1. It makes the filenames unreadable.
2. It affects multiple languages; every RTL language is affected.
3. It is always visible in the start center.
4. There is no workaround.

It would be good if a fix, or even a revert, is provided for LibreOffice 26.2 release.
Comment 5 Commit Notification 2025-12-10 08:23:07 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d3df96b5482d10aa4c74c00d21fb3fcddeb6edd0

tdf#169730: partially revert the fix for tdf#168452

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-10 14:05:25 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8be76364f4da0ca0003be46024cb1825310044ba

tdf#169730: partially revert the fix for tdf#168452

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-10 20:57:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-4":

https://git.libreoffice.org/core/commit/968fb9d7a8d426b0bde160d3cfd9f9f1a6fb924c

tdf#169730: partially revert the fix for tdf#168452

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-12-11 08:29:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/7c3a9cb27b5c2ce268c68730bcc0b68adb70e5d8

tdf#169730: partially revert the fix for tdf#168452

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.