tdf#169730: partially revert the fix for tdf#168452

Revert the problematic part from e5f0dad2b38d2a3902a9cd6b9d434abc206590a4
"tdf#168452: support unicode-bidi in svg"
until a better solution is found

Change-Id: If21b0c38b5fd8bdade0538e4960353d156e17e2a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195307
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit d3df96b5482d10aa4c74c00d21fb3fcddeb6edd0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195351